Bug 702950 - Valgrind error in gx_restrict_ICC
Summary: Valgrind error in gx_restrict_ICC
Status: RESOLVED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: Valgrind/AddressSanitizer (show other bugs)
Version: master
Hardware: PC Linux
: P4 normal
Assignee: Ray Johnston
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-10-01 07:20 UTC by Peter Cherepanov
Modified: 2021-08-24 16:23 UTC (History)
0 users

See Also:
Customer:
Word Size: ---


Attachments
Sample file (425.95 KB, application/pdf)
2020-10-01 07:20 UTC, Peter Cherepanov
Details
Log files (8.33 KB, application/gzip)
2020-10-02 07:56 UTC, Peter Cherepanov
Details
Patch (1.36 KB, patch)
2020-10-12 03:03 UTC, Peter Cherepanov
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Peter Cherepanov 2020-10-01 07:20:07 UTC
Created attachment 19897 [details]
Sample file

Valgrind reports an error in gx_restrict_ICC() on pgmraw, ps2write and xpswrite devices.
Comment 1 Peter Cherepanov 2020-10-02 07:56:46 UTC
Created attachment 19905 [details]
Log files

Here are the logs for the commit df537046c2130be285b213b5d0478159d1c5b16d .
This bug report is about the first error in the logs. The rest are assumed to be duplicates or parts of the cascade.
Comment 3 Ray Johnston 2021-08-24 16:23:14 UTC
Fix committed as dd34f848f9b1c482a3271f3cde9b3dbe34b5a1f9

Thanks, Peter.